@@ -1,5 +1,16 @@
 2004-08-25  Dalibor Topic  <robilad@kaffe.org>
 
+	* libraries/javalib/java/security/cert/X509CRLSelector.java:
+	Resynced with GNU Classpath.
+
+	2004-08-22  Casey Marshall  <csm@gnu.org>
+
+        * java/security/cert/X509CRLSelector.java
+        (match): remove unreachable try-catch clauses.
+        Reported by: Dalibor Topic <robilad@kaffe.org>
+
+2004-08-25  Dalibor Topic  <robilad@kaffe.org>
+
 	* configure.ac: Cleaned up checks for glibc version further.
 	Moved boehm-gc checking code after header checking code to
 	make sure the glibc version checks can use feature.h, if 
